# airplay-obs

./: .gitignore  CMakeLists.txt  Install.command  README.md
.github/workflows/: release.yml
obs-airplay-source.plugin/Contents/: Info.plist
obs-airplay-source.plugin/Contents/Frameworks/: libSvtAv1Enc.4.1.0.dylib  libX11-xcb.1.dylib  libX11.6.dylib  libavfilter.11.14.101.dylib  libavformat.62.12.101.dylib  libavutil.60.26.101.dylib  libgio-2.0.0.dylib  libglib-2.0.0.dylib  libgmodule-2.0.0.dylib  libgobject-2.0.0.dylib  libgstapp-1.0.0.dylib  libgstapp.dylib  libgstapplemedia.dylib  libgstaudio-1.0.0.dylib  libgstaudioconvert.dylib  libgstaudioresample.dylib  libgstautodetect.dylib  libgstbase-1.0.0.dylib  libgstcodecparsers-1.0.0.dylib  libgstcoreelements.dylib  libgstgl-1.0.0.dylib  libgstlibav.dylib  libgstnet-1.0.0.dylib  libgstpbutils-1.0.0.dylib  libgstplayback.dylib  libgstreamer-1.0.0.dylib  libgstrtp-1.0.0.dylib  libgstrtp.dylib  libgstrtpmanager.dylib  libgstsdp-1.0.0.dylib  libgsttag-1.0.0.dylib  libgsttypefindfunctions.dylib  libgstudp.dylib  libgstvideo-1.0.0.dylib  libgstvideoparsersbad.dylib  liborc-0.4.0.dylib  libssl.3.dylib  libswresample.6.3.101.dylib  libswscale.9.5.101.dylib  libvmaf.3.dylib  (+1 more)
obs-airplay-source.plugin/Contents/MacOS/: obs-airplay-source
obs-airplay-source.plugin/Contents/MacOS/gstreamer-1.0/: libgstapp.dylib  libgstapplemedia.dylib  libgstaudioconvert.dylib  libgstaudioresample.dylib  libgstautodetect.dylib  libgstcoreelements.dylib  libgstlibav.dylib  libgstplayback.dylib  libgstrtp.dylib  libgstrtpmanager.dylib  libgsttypefindfunctions.dylib  libgstudp.dylib  libgstvideoconvertscale.dylib  libgstvideoparsersbad.dylib  libgstvolume.dylib
obs-airplay-source.plugin/Contents/_CodeSignature/: CodeResources
scripts/: build.sh  fetch-obs-headers.sh  fix-bundled-gstreamer.sh  install.sh
src/: airplay-source.cpp
